Product page -the arrow not centered  (bug 2240)

--- a/Zbang.Cloudents.Mvc4WebRole/Content/StoreRtl.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/StoreRtl.less
@@ -56,7 +56,7 @@ header {
     left: auto;
     &:before {
         //right: 260px; /* diff rtl*/
-        right: 269px; /* diff rtl*/
+        right: 267px; /* diff rtl*/
         left: auto;
     }
 }
